--- a/business-service/pom.xml
+++ b/business-service/pom.xml
@@ -11,6 +11,7 @@
 	</parent>
 	<artifactId>business-service</artifactId>
 	<name>business-service</name>
+	<packaging>jar</packaging>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
@@ -24,17 +25,31 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- nacos注册中心 -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+		</dependency>
+		<!--nacos配置中心 -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-alibaba-seata</artifactId>
+			<groupId>io.seata</groupId>
+			<artifactId>seata-spring</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>io.seata</groupId>
-			<artifactId>seata-spring</artifactId>
+			<artifactId>seata-config-nacos</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.seata</groupId>
+			<artifactId>seata-discovery-nacos</artifactId>
 		</dependency>
 	</dependencies>
 	<build>
