--- a/business-service/src/main/resources/bootstrap.properties
+++ b/business-service/src/main/resources/bootstrap.properties
@@ -9,3 +9,5 @@ spring.cloud.nacos.config.namespace=93a85465-f1cd-44b3-8501-70dacba49005
 
 logging.level.io.seata=debug
 logging.level.com.alibaba.nacos=error
+
+spring.cloud.alibaba.seata.tx-service-group=my_test_tx_group
