--- a/order-service/src/main/resources/bootstrap.properties
+++ b/order-service/src/main/resources/bootstrap.properties
@@ -7,3 +7,7 @@ spring.main.allow-bean-definition-overriding=true
 spring.cloud.nacos.config.server-addr=127.0.0.1:8848
 spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
 spring.cloud.nacos.config.namespace=93a85465-f1cd-44b3-8501-70dacba49005
+spring.cloud.nacos.config.ext-config[0].dataId=order-service.properties
+spring.cloud.nacos.config.ext-config[0].refresh=true
+spring.cloud.nacos.config.ext-config[1].dataId=logback-spring.properties
+spring.cloud.nacos.config.ext-config[1].refresh=true
