--- a/user-service/src/main/resource/bootstrap.properties
+++ b/user-service/src/main/resource/bootstrap.properties
@@ -1,5 +1,5 @@
-spring.application.name=order-service
-server.port=8003
+spring.application.name=user-service
+server.port=8005
 
 spring.main.allow-bean-definition-overriding=true
 
@@ -7,5 +7,5 @@ spring.main.allow-bean-definition-overriding=true
 spring.cloud.nacos.config.server-addr=127.0.0.1:8848
 spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
 spring.cloud.nacos.config.namespace=93a85465-f1cd-44b3-8501-70dacba49005
-spring.cloud.nacos.config.ext-config[0].dataId=order-service.properties
+spring.cloud.nacos.config.ext-config[0].dataId=user-service.properties
 spring.cloud.nacos.config.ext-config[0].refresh=true
