--- a/account-service/src/main/resources/bootstrap.properties
+++ b/account-service/src/main/resources/bootstrap.properties
@@ -1,5 +1,5 @@
-spring.application.name=order-service
-server.port=8003
+spring.application.name=account-service
+server.port=8002
 
 spring.main.allow-bean-definition-overriding=true
 
@@ -7,5 +7,9 @@ spring.main.allow-bean-definition-overriding=true
 spring.cloud.nacos.config.server-addr=127.0.0.1:8848
 spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
 spring.cloud.nacos.config.namespace=93a85465-f1cd-44b3-8501-70dacba49005
-spring.cloud.nacos.config.ext-config[0].dataId=order-service.properties
+spring.cloud.nacos.config.ext-config[0].dataId=account-service.properties
 spring.cloud.nacos.config.ext-config[0].refresh=true
+#xml格式貌似并没效果
+spring.cloud.nacos.config.ext-config[1].dataId=logback-spring.properties
+spring.cloud.nacos.config.ext-config[1].refresh=true
+
