--- a/reliable-message/fuli-cloud-app-message/pom.xml
+++ b/reliable-message/fuli-cloud-app-message/pom.xml
@@ -17,6 +17,11 @@
 	<dependencies>
 
 		<dependency>
+			<dependency>
+				<groupId>eyihcn</groupId>
+				<artifactId>common-core</artifactId>
+				<version>0.0.1-SNAPSHOT</version>
+			</dependency>
 			<groupId>eyihcn</groupId>
 			<artifactId>provider-message-service-api</artifactId>
 			<version>${provider-message-service-api.version}</version>
@@ -65,10 +70,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-amqp</artifactId>
 		</dependency>
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.codehaus.jackson</groupId> -->
-<!-- 			<artifactId>jackson-mapper-asl</artifactId> -->
-<!-- 		</dependency> -->
+		<!-- <dependency> -->
+		<!-- <groupId>org.codehaus.jackson</groupId> -->
+		<!-- <artifactId>jackson-mapper-asl</artifactId> -->
+		<!-- </dependency> -->
 	</dependencies>
 	<!-- 形成带第三方jar包的可执行jar包，jar包目录结构如下 application.properties lib META-INF mybatis 
 		org -->
