--- a/seata-sample/order-service/pom.xml
+++ b/seata-sample/order-service/pom.xml
@@ -13,6 +13,11 @@
 	<name>order-service</name>
 	<dependencies>
 		<dependency>
+			<groupId>eyihcn</groupId>
+			<artifactId>common-core</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
