--- a/user-service/src/main/resource/bootstrap.properties
+++ b/user-service/src/main/resource/bootstrap.properties
@@ -3,23 +3,12 @@ server.port=8005
 
 spring.main.allow-bean-definition-overriding=true
 
+spring.datasource.url=jdbc:mysql://localhost:3306/test?useSSL=false&serverTimezone=Asia/Shanghai&characterEncoding=utf8mb4&autoReconnect=true
+spring.datasource.username=root
+spring.datasource.password=root
+
 spring.cloud.nacos.config.server-addr=127.0.0.1:8848
 spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
 spring.cloud.nacos.config.namespace=93a85465-f1cd-44b3-8501-70dacba49005
 spring.cloud.nacos.config.ext-config[0].dataId=user-service.properties
 spring.cloud.nacos.config.ext-config[0].refresh=true
-# common spring boot settings
-#spring.redis.database=
-#spring.redis.host=
-#spring.redis.port=
-#spring.redis.password=
-#spring.redis.ssl=
-#spring.redis.timeout=
-#spring.redis.cluster.nodes=
-#spring.redis.sentinel.master=
-#spring.redis.sentinel.nodes=
-
-# Redisson settings
-
-#path to redisson.yaml or redisson.json
-spring.redis.redisson.config=classpath:redisson.yaml
