--- a/user-service/src/main/resource/bootstrap.properties
+++ b/user-service/src/main/resource/bootstrap.properties
@@ -10,5 +10,8 @@ spring.datasource.password=root
 spring.cloud.nacos.config.server-addr=127.0.0.1:8848
 spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
 spring.cloud.nacos.config.namespace=93a85465-f1cd-44b3-8501-70dacba49005
-spring.cloud.nacos.config.ext-config[0].dataId=user-service.properties
+spring.cloud.nacos.config.ext-config[0].data-id=user-service.properties
 spring.cloud.nacos.config.ext-config[0].refresh=true
+spring.cloud.nacos.config.ext-config[1].data-id=redisson.properties
+spring.cloud.nacos.config.ext-config[1].refresh=true
+logging.level.eyihcn=debug
